# Speaky-Client

./: .clang-format  .gitmodules  BottomPanel.qml  CMakeLists.txt  Chat.qml  Main.qml  MainPage.qml  MessageBox.qml  RegistrationForm.qml  backend.cpp  backend.h  chatmodel.cpp  chatmodel.h  main.cpp  network.h
